Created attachment 152669 [details] missing args in format string Missing args in format string. From illumos bug #5600
A commit references this bug: Author: markj Date: Sun Mar 15 21:57:44 UTC 2015 New revision: 280125 URL: https://svnweb.freebsd.org/changeset/base/280125 Log: Add a missing format string argument. PR: 197391 MFC after: 3 days Changes: head/cddl/contrib/opensolaris/tools/ctf/cvt/ctf.c
A commit references this bug: Author: markj Date: Wed Mar 18 02:29:01 UTC 2015 New revision: 280200 URL: https://svnweb.freebsd.org/changeset/base/280200 Log: MFC r280125: Add a missing format string argument. PR: 197391 Changes: _U stable/9/cddl/contrib/opensolaris/ stable/9/cddl/contrib/opensolaris/tools/ctf/cvt/ctf.c
A commit references this bug: Author: markj Date: Wed Mar 18 02:29:52 UTC 2015 New revision: 280201 URL: https://svnweb.freebsd.org/changeset/base/280201 Log: MFC r280125: Add a missing format string argument. PR: 197391 Changes: _U stable/10/ stable/10/cddl/contrib/opensolaris/tools/ctf/cvt/ctf.c
Fixed in stable/9 and 10. Thanks for the PR.