MFC r280125: Add a missing format string argument.

PR:		197391